[package]
name = "klein-sys"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Low-level bindings to the Klein PGA3D library"
homepage = "https://github.com/jamen/klein-rs"
repository = "https://github.com/jamen/klein-rs"
documentation = "https://docs.rs/klein-sys"
readme = "../readme.md"
build = "build.rs"

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.70"
